// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewCommentsBySurveyId should respond with failure when an error occurs 1`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 500,
}
`;

exports[`viewCommentsBySurveyId should return comments from database 1`] = `
"SELECT * 
          FROM Comments 
          WHERE surveyId = 'MOCK_SURVEY_ID'"
`;

exports[`viewCommentsBySurveyId should return comments from database 2`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "applications/json",
  },
  "statusCode": 200,
}
`;
